add view per category

--- a/templates/index/index.html.twig
+++ b/templates/index/index.html.twig
@@ -13,7 +13,7 @@
             <div class="collapse navbar-collapse" id="navbarResponsive">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link js-scroll-trigger" href="#featured">browse all gigs</a>
+                        <a class="nav-link js-scroll-trigger" href="{{ path('all-gigs') }}">browse all gigs</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link js-scroll-trigger" href="#partner">become a partner</a>
@@ -174,7 +174,7 @@
         <div class="container-fluid">
             <div class="col-md-12 mx-auto d-flex justify-content-center">
                 <ul class="d-flex justify-content-center p-0">
-                    <li><a href="#">BROWSE ALL GIGS</a></li>
+                    <li><a href="{{path('all-gigs')}}">BROWSE ALL GIGS</a></li>
                     <li><a href="#">BECOME A PARTNER</a></li>
                     <li><a href="#">CONTACT US</a></li>
                 </ul>
